--- a/index.html
+++ b/index.html
@@ -23,7 +23,35 @@
         <select class="search__branches" id="branches"></select>
         <button class="search__button" type="submit" value="Submit">Submit</button>
     </div>
+	<a href="https://eic.phy.anl.gov/geoviewer/index.htm?nobrowser&file=https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/geo/detector_geo.root?job=dump_geometry&item=default;1&opt=clipx;clipy;transp30;zoom120;ROTY320;ROTZ340;trz0;trr0;ctrl;all">
+		Link to 3D viewer (central detector)
+	</a><br/>
 
-    
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/browse/geo/detector_geo.root?job=report">
+		Link to 3D viewer (central detector)
+	</a><br/>
+
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/browse/?job=report">
+		List of artifacts link
+	</a><br/>
+
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/doc/constants.out?job=report">
+		Constants listing
+	</a><br/>
+
+	
+
+
+
+[Constants listing]()
+	
+
+    <a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view01.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view01.png?job=report" width="400px" /></a>
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02a.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02a.png?job=report" width="400px" /></a>
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02b.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02b.png?job=report" width="400px" /></a>
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02c.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02c.png?job=report" width="400px" /></a>
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02d.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02d.png?job=report" width="400px" /></a>
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02e.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02e.png?job=report" width="400px" /></a>
+
 </body>
 </html>
