--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
         <select class="search__branches" id="branches"></select>
         <button class="search__button" type="submit" value="Submit">Submit</button>
     </div>
+
+	Pipeline #28831. Success = 	passed. Branch=master(link) commit=f31bac7b (link). Author wdconinc's 
+	Update for current master, from... 00:18:54 16 hours ago
+
 	<a href="https://eic.phy.anl.gov/geoviewer/index.htm?nobrowser&file=https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/geo/detector_geo.root?job=dump_geometry&item=default;1&opt=clipx;clipy;transp30;zoom120;ROTY320;ROTZ340;trz0;trr0;ctrl;all">
 		Link to 3D viewer (central detector)
 	</a><br/>
 
 	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/browse/geo/detector_geo.root?job=report">
-		Link to 3D viewer (central detector)
+		File to download ()
 	</a><br/>
 
 	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/browse/?job=report">
