--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         <div class="logo">
             <a class="logo__name" href="#">Artifacts</a>
         </div>
+        <input type="checkbox" id="nav-toggle" hidden>
+        <nav class="nav">
+            <label for="nav-toggle" class="nav-toggle" onclick></label>
+            <ul>
+                <li><a href="#">Link to 3D viewer (central detector)</a>
+                <li><a href="#">File to download ()</a>
+                <li><a href="#">List of artifacts link</a>
+                <li><a href="#">Constants listing</a>
+            </ul>
+        </nav>
     </header>
     
     <div class="search">
@@ -24,7 +34,7 @@
         <button class="search__button" type="submit" value="Submit">Submit</button>
     </div>
 
-	Pipeline #28831. Success = 	passed. Branch=master(link) commit=f31bac7b (link). Author wdconinc's 
+	<!-- Pipeline #28831. Success = 	passed. Branch=master(link) commit=f31bac7b (link). Author wdconinc's 
 	Update for current master, from... 00:18:54 16 hours ago
 
 	<a href="https://eic.phy.anl.gov/geoviewer/index.htm?nobrowser&file=https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/geo/detector_geo.root?job=dump_geometry&item=default;1&opt=clipx;clipy;transp30;zoom120;ROTY320;ROTZ340;trz0;trr0;ctrl;all">
@@ -55,7 +65,7 @@
 	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02b.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02b.png?job=report" width="400px" /></a>
 	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02c.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02c.png?job=report" width="400px" /></a>
 	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02d.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02d.png?job=report" width="400px" /></a>
-	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02e.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02e.png?job=report" width="400px" /></a>
+	<a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02e.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02e.png?job=report" width="400px" /></a> -->
 
 </body>
 </html>
