--- a/index.html
+++ b/index.html
@@ -63,27 +63,45 @@
     <div class="images">
         <figure>
             <a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view01.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view01.png?job=report"></a>
-            <figcaption>Description</figcaption>
+            <figcaption>
+                Description
+                <button class="img__button" type="submit" value="3D_view">3D VIEW</button>
+            </figcaption>
         </figure>
         <figure>
             <a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02a.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02a.png?job=report"></a>
-            <figcaption>Description</figcaption>
+            <figcaption>
+                Description
+                <button class="img__button" type="submit" value="3D_view">3D VIEW</button>
+            </figcaption>
         </figure>
         <figure>
             <a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02b.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02b.png?job=report"></a>
-            <figcaption>Description</figcaption>
+            <figcaption>
+                Description
+                <button class="img__button" type="submit" value="3D_view">3D VIEW</button>
+            </figcaption>
         </figure>
         <figure>
             <a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02c.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02c.png?job=report"></a>
-            <figcaption>Description</figcaption>
+            <figcaption>
+                Description
+                <button class="img__button" type="submit" value="3D_view">3D VIEW</button>
+            </figcaption>
         </figure>
         <figure>
             <a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02d.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02d.png?job=report"></a>
-            <figcaption>Description</figcaption>
+            <figcaption>
+                Description
+                <button class="img__button" type="submit" value="3D_view">3D VIEW</button>
+            </figcaption>
         </figure>
         <figure>
             <a href="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02e.pdf?job=report"><img src="https://eicweb.phy.anl.gov/EIC/detectors/athena/-/jobs/artifacts/master/raw/images/view02e.png?job=report"></a> 
-            <figcaption>Description</figcaption>
+            <figcaption>
+                Description
+                <button class="img__button" type="submit" value="3D_view">3D VIEW</button>
+            </figcaption>
         </figure>
     </div>
         
